--- a/src/components/document-metadata-modal.yml
+++ b/src/components/document-metadata-modal.yml
@@ -19,6 +19,9 @@ useTemplateDocument:
 review:
   en: Review
   de: Review
+verified:
+  en: Verified document
+  de: Überprüftes Dokument
 createSequence:
   en: Create sequence
   de: Reihe anlegen
@@ -32,3 +35,8 @@ sequenceInfo:
   de: |
     Du kannst mehrere Dokumente gleichzeitig anlegen.
     An den Titel bzw. URL-Pfad wird für jedes Dokument eine laufende Nummer angehängt.
+verifiedInfo:
+  en:
+    As a content maintainer, you can vouche for the quality of this document. Verified documents have higher relevance in the search results.
+  de:
+    Als Inhalt-Maintainer kannst du die Qualität <something something>. Überprüfte Dokumente haben eine höchere Relevanz auf der Suchseite.
