EDU-736 Sort out CSS and translations

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -31,6 +31,9 @@ edit:
 apply:
   en: Apply
   de: Übernehmen
+applyChanges:
+  en: Apply changes
+  de: Änderungen übernehmen
 discard:
   en: Discard
   de: Verwerfen
