EDU-763 Correct displaying comments panel

--- a/src/components/pages/doc.yml
+++ b/src/components/pages/doc.yml
@@ -7,3 +7,6 @@ permalinkCouldNotBeCopied:
 documentMetadataUpdated:
   en: Document updated successfully
   de: Das Dokument wurde erfolgreich aktualisiert
+commentsPanelTitle:
+  en: Viewing document page in "comments" mode
+  de: Viewing document page in "comments" mode
