--- a/src/components/pages/doc.yml
+++ b/src/components/pages/doc.yml
@@ -8,5 +8,5 @@ documentMetadataUpdated:
   en: Document updated successfully
   de: Das Dokument wurde erfolgreich aktualisiert
 commentsPanelTitle:
-  en: Viewing document page in "comments" mode
-  de: Viewing document page in "comments" mode
+  en: You are viewing the document page in "comments" mode
+  de: Du befindest dich im Kommentar-Modus
