--- a/src/components/pages/doc.yml
+++ b/src/components/pages/doc.yml
@@ -10,3 +10,6 @@ documentMetadataUpdated:
 commentsPanelTitle:
   en: You are viewing the document page in "comments" mode
   de: Du befindest dich im Kommentar-Modus
+commentsHeader:
+  en: Discussions about the document
+  de: Debatten über das Dokument
