EDU-765 Render comments

--- a/src/components/pages/doc.yml
+++ b/src/components/pages/doc.yml
@@ -11,5 +11,5 @@ commentsPanelTitle:
   en: You are viewing the document page in "comments" mode
   de: Du befindest dich im Kommentar-Modus
 commentsHeader:
-  en: Discussions about the document
-  de: Debatten über das Dokument
+  en: Comment topics
+  de: Themen der Kommentare
