EDU-765 Improve styling

--- a/src/components/pages/doc.yml
+++ b/src/components/pages/doc.yml
@@ -12,4 +12,4 @@ commentsPanelTitle:
   de: Du befindest dich im Kommentar-Modus
 commentsHeader:
   en: Comment topics
-  de: Themen der Kommentare
+  de: Kommentare-Themen
