EDU-766 Support posting comments

--- a/src/components/comments-panel.yml
+++ b/src/components/comments-panel.yml
@@ -1,3 +1,6 @@
 addCommentButtonText:
   en: Write comment
   de: Kommentar schreiben
+postCommentButtonText:
+  en: Post comment
+  de: Kommentar aufgeben
