EDU-766 Support posting a new comment under a new topic

--- a/src/components/comments-panel.yml
+++ b/src/components/comments-panel.yml
@@ -4,3 +4,6 @@ addCommentButtonText:
 postCommentButtonText:
   en: Post comment
   de: Kommentar aufgeben
+newTopicPlaceholder:
+  en: New topic
+  de: Neues Thema
