EDU-766 Correct German text

--- a/src/components/comments-panel.yml
+++ b/src/components/comments-panel.yml
@@ -3,7 +3,7 @@ addCommentButtonText:
   de: Kommentar schreiben
 postCommentButtonText:
   en: Post comment
-  de: Kommentar aufgeben
+  de: Kommentar abschicken
 newTopicPlaceholder:
   en: New topic
   de: Neues Thema
