EDU-767 Show placeholder text fot deleted comments

--- a/src/components/comments-panel.yml
+++ b/src/components/comments-panel.yml
@@ -7,3 +7,6 @@ postCommentButtonText:
 newTopicPlaceholder:
   en: New topic
   de: Neues Thema
+commentDeleted:
+  en: The content of this comment was deleted by maintainers.
+  de: Der Inhalt dieses Komment war von Maintainers gelöscht.
