EDU-767 Correct translations

--- a/src/components/comments-panel.yml
+++ b/src/components/comments-panel.yml
@@ -9,4 +9,4 @@ newTopicPlaceholder:
   de: Neues Thema
 commentDeleted:
   en: The content of this comment was deleted by maintainers.
-  de: Der Inhalt dieses Komment war von Maintainers gelöscht.
+  de: Der Inhalt dieses Kommentars wurde von einem Maintainer gelöscht.
