EDU-777 Write badges helptexts

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -421,13 +421,13 @@ emailIsInvalid:
   de: Deine Eingabe ist keine gültige E-Mail-Adresse
 verifiedDocumentBadge:
   en: This document was verified by a maintainer
-  de: Dieses Dokument wurde von einem Maintainer Überprüft
+  de: Dieses Dokument wurde von einem Maintainer überprüft
 allowedOpenContributionBadge_none:
-  en: Open contribution is not allowed on this document
-  de: Open contribution is not allowed on this document
+  en: Open contribution to this document is not allowed
+  de: Dieses Dokument kann nicht öffentlich bearbeitet werden
 allowedOpenContributionBadge_metadataAndContent:
-  en: Open contribution is allowed for the document metadata and document content
-  de: Open contribution is allowed for the document metadata and document content
+  en: Open contribution to this document's metadata and content is allowed
+  de: Dieses Dokument kann vollständig öffentlich bearbeitet werden
 allowedOpenContributionBadge_content:
-  en: Open contribution is allowed for the document content
-  de: Open contribution is allowed for the document content
+  en: Open contribution to this document's metadata is not allowed
+  de: Die Metadaten dieses Dokuments können nicht öffentlich bearbeitet werden
