EDU-784 Add chapter image

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -357,6 +357,9 @@ videoDisplay:
 source:
   en: Source
   de: Quelle
+imageSource:
+  en: Image source
+  de: Bild-Quelle
 size:
   en: Size
   de: Größe
