EDU-784 Various corrections

--- a/src/components/media-player/chapter-selector.yml
+++ b/src/components/media-player/chapter-selector.yml
@@ -1,6 +1,6 @@
 selectPreviousChapter:
   en: Select previous chapter
-  de: Vorheriges Kapitel wählen
+  de: Vorheriges Kapitel auswählen
 selectNextChapter:
   en: Select next chapter
   de: Nächstes Kapitel wählen
