EDU-799 Make validation not fail early and add tests

--- a/src/components/admin/settings-tab.yml
+++ b/src/components/admin/settings-tab.yml
@@ -31,9 +31,9 @@ templateDocumentHeader:
 licenseHeader:
   en: License
   de: Lizenz
-dataMigrationHeader:
-  en: Data migration
-  de: Datenmigration
+technicalMaintenanceTasksHeader:
+  en: Technical maintenance tasks
+  de: Technische Instandhaltungsaufgaben
 lastExecution:
   en: Last execution
   de: Letzte Ausführung
