--- a/src/plugins/media-slideshow/media-slideshow.yml
+++ b/src/plugins/media-slideshow/media-slideshow.yml
@@ -1,3 +1,9 @@
 name:
   en: Media slideshow
   de: Medien-Slideshow
+chapterType_image:
+  en: image
+  de: Bild
+chapterType_text:
+  en: text
+  de: Text
