EDU-801 Extract technical maintenance tab on admin page

--- a/src/components/pages/admin.yml
+++ b/src/components/pages/admin.yml
@@ -4,3 +4,6 @@ settingsTabTitle:
 storagePlansTabTitle:
   en: Storage plans
   de: Speicherpläne
+technicalMaintenanceTabTitle:
+  en: Technical maintenance
+  de: Technische Instandhaltung
