--- a/src/ui/mime-type-helper.yml
+++ b/src/ui/mime-type-helper.yml
@@ -29,7 +29,7 @@ mimeTypeCategoryProgram:
   en: Program
   de: Programm
 mimeTypeCategoryFolder:
-  en: Folder
+  en: Directory
   de: Verzeichnis
 mimeTypeCategoryUnknown:
   en: Unknown
