EDU-796 Provide document data along width cdn objects which are directories

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -261,6 +261,12 @@ opt:
 unknown:
   en: Unknown
   de: Unbekannt
+unknownDocument:
+  en: Unknown document
+  de: Unbekanntes Dokument
+privateDocument:
+  en: Private document
+  de: Privates Dokument
 storage:
   en: Storage
   de: Speicher
