EDU-802 Make filtering the task table more obvious

--- a/src/components/pages/batches.yml
+++ b/src/components/pages/batches.yml
@@ -58,3 +58,6 @@ status_warning:
 status_error:
   en: Completed with errors
   de: Abgeschlossen mit Fehlern
+hideSuccessfullyCompletedTasks:
+  en: Hide successfully completed tasks
+  de: Erfolgreich abgeschlossene Tasks ausblenden
