EDU-813 Create media-analysis plugin

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -455,3 +455,16 @@ chapter:
 editChapter:
   en: Edit chapter
   de: Kapitel bearbeiten
+mainTrack:
+  en: Main track
+  de: Hauptspur
+secondaryTrack:
+  en: Track {number}
+  de: Spur {number}
+addTrack:
+  en: Add track
+  de: Spur hinzufügen
+trackMixer:
+  en: Track mixer
+  de: Spur-Mixer
+
