EDU-814 Add segments panel to media-analysis plugin

--- a/src/plugins/media-analysis/media-analysis.yml
+++ b/src/plugins/media-analysis/media-analysis.yml
@@ -1,3 +1,12 @@
 name:
   en: Media analysis
   de: Medien-Analyse
+segmentsPanelHeader:
+  en: Segments
+  de: Segmente
+chapterColorLabel:
+  en: Color
+  de: Farbe
+chapterTextLabel:
+  en: Annotation
+  de: Anmerkung
