--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "multer": "^1.4.3",
     "node-graceful": "^3.1.0",
     "nodemailer": "^6.7.0",
+    "opensheetmusicdisplay": "^1.5.6",
     "parse5": "^6.0.1",
     "parseboolean": "^1.0.0",
     "passport": "^0.5.0",
