--- a/src/plugins/media-analysis/media-analysis.yml
+++ b/src/plugins/media-analysis/media-analysis.yml
@@ -10,3 +10,9 @@ chapterColorLabel:
 chapterTextLabel:
   en: Annotation
   de: Anmerkung
+more:
+  en: more ...
+  de: mehr ...
+less:
+  en: less ...
+  de: weniger ...
