--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "soundfont-player": "^0.12.0",
     "stream-to-array": "^2.3.0",
     "thenby": "^1.3.4",
+    "tone": "^14.7.77",
     "toposort": "^2.0.2",
     "umzug": "^3.0.0",
     "uuid": "^8.3.2"
