Implement key range selector.

--- a/src/plugins/midi-piano/midi-piano.yml
+++ b/src/plugins/midi-piano/midi-piano.yml
@@ -1,3 +1,16 @@
 name:
   en: Midi piano
   de: Midi-Klavier
+midiTrackTitle:
+  en: Track title
+  de: Stück-Titel
+pianoKeyRange:
+  en: Key range
+  de: Tastenumfang
+confirm:
+  en: Confirm
+  de: Bestätigen
+keyRangeSelectionNote:
+  en: Please select the two outermost keys to be displayed.
+  de: Bitte wählen Sie die beiden äußersten anzuzeigenden Tasten aus.
+
