EDU-829 Correct German texts

--- a/src/components/media-player/track-mixer.yml
+++ b/src/components/media-player/track-mixer.yml
@@ -3,4 +3,4 @@ noTrack:
   de: keine Spur
 manageVolumePresets:
   en: Manage volume presets
-  de: Volumen-Vorwahl bearbeiten
+  de: Lautstärke-Voreinstellungen bearbeiten
