Implement correct piano scaling on window resize.

--- a/src/plugins/midi-piano/midi-piano.yml
+++ b/src/plugins/midi-piano/midi-piano.yml
@@ -11,6 +11,6 @@ confirm:
   en: Confirm
   de: Bestätigen
 keyRangeSelectionNote:
-  en: Please select the two outermost keys to be displayed.
-  de: Bitte wählen Sie die beiden äußersten anzuzeigenden Tasten aus.
+  en: Please select the two outermost white keys to be displayed.
+  de: Bitte wählen Sie die beiden äußersten anzuzeigenden weißen Tasten aus.
 
