--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "node-graceful": "^3.1.0",
     "nodemailer": "^6.7.0",
     "opensheetmusicdisplay": "^1.5.6",
+    "papaparse": "^5.3.2",
     "parse5": "^6.0.1",
     "parseboolean": "^1.0.0",
     "passport": "^0.5.0",
