EDU-840 Show info icon

--- a/src/plugins/media-analysis/media-analysis.yml
+++ b/src/plugins/media-analysis/media-analysis.yml
@@ -22,3 +22,6 @@ exportAsCsv:
 importFromCsv:
   en: Import from CSV file
   de: Aus CSV-Datei importieren
+segmentsDropzoneInfo:
+  en: You can drop a CSV file in this box in order to import segments
+  de: Sie können eine CSV-Datei in diese Box ziehen, um Segmente zu importieren
