EDU-832 Trigger native import from imports page based on typed in key word

--- a/src/components/pages/create-import.yml
+++ b/src/components/pages/create-import.yml
@@ -4,3 +4,6 @@ importButton:
 backToImports:
   en: Back to the overview
   de: Zurück zur Übersicht
+nativeImportPlaceholder:
+  en: Text for native import
+  de: Text für Schlussimport
