EDU-887 Add interactivity to waveform editor

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -476,3 +476,6 @@ defaultVolumePreset:
 volumePreset:
   en: Volumes preset
   de: Lautstärke-Voreinstellung
+displayMode:
+  en: Display mode
+  de: Anzeigemodus
