EDU-887 Add interactivity to waveform display

--- a/src/plugins/audio-waveform/audio-waveform.yml
+++ b/src/plugins/audio-waveform/audio-waveform.yml
@@ -31,6 +31,12 @@ backgroundColor:
 opacityWhenResolved:
   en: Opacity (resolved)
   de: Deckkraft (aufgelöst)
+showResolution:
+  en: Show resolution
+  de: Auflösung anzeigen
+hideResolution:
+  en: Hide resolution
+  de: Auflösung ausblenden
 dialogTitle:
   en: Generate waveform image
   de: Wellenform-Bild erstellen
