EDU-893 Add users filter

--- a/src/components/pages/users.yml
+++ b/src/components/pages/users.yml
@@ -64,3 +64,6 @@ reminders:
 accountClosedOn:
   en: Account closing date
   de: Kontoschlussdatum
+filterPlaceholder:
+  en: Filter by display name or email
+  de: Nach Anzeigename oder E-Mail filtern
