EDU-891 Replace the term 'CDN' with 'internal storage'

--- a/src/components/confirmation-dialogs.yml
+++ b/src/components/confirmation-dialogs.yml
@@ -29,8 +29,8 @@ leaveRoomConfirmation:
   en: Do you really want to cancel your membership in room "{roomName}"?
   de: Möchtest du deine Mitgliedschaft im Raum "{roomName}" wirklich beenden?
 deleteCdnDocumentConfirmation:
-  en: Do you really want to delete the CDN file "{fileName}"?
-  de: Möchtest du die Datei "{fileName}" wirklich vom CDN löschen?
+  en: Do you really want to delete the file "{fileName}" from the internal storage?
+  de: Möchtest du die Datei "{fileName}" wirklich vom internen Speicher löschen?
 thisActionIsIrreversible:
   en: This action is irreversible!
   de: Diese Aktion ist unwiderrufbar!
