--- a/src/components/markdown-input.yml
+++ b/src/components/markdown-input.yml
@@ -2,5 +2,5 @@ previewArea:
   en: Preview area
   de: Vorschaubereich
 resourcePickerTooltip:
-  en: Click to insert a link to a selected resource
-  de: Klicken, um eine gewählte Ressource einzusetzen
+  en: Click here to insert a link to a selected resource
+  de: Klicke hier, um einen Link zu einer ausgewählten Ressource einzufügen
