--- a/src/components/admin/technical-maintenance-tab.yml
+++ b/src/components/admin/technical-maintenance-tab.yml
@@ -1,6 +1,6 @@
 tabInfo:
-  en: You can trigger different tasks from here, in order to execute technical maintenance over the database and the CDN.
-  de: Hier kannst du die Ausführung von Tasks zur Instandhaltung der Datenbank und des CDNs starten.
+  en: You can trigger different tasks from here, in order to execute technical maintenance over the database and the internal storage.
+  de: Hier kannst du die Ausführung von Tasks zur Instandhaltung der Datenbank und des internen Speichers starten.
 documentsValidationHeader:
   en: Documents validation
   de: Dokumente validieren
@@ -14,17 +14,17 @@ documentsRegenerationDescription:
   en: Re-create all documents based on their document revisions. This tasks updates database data, possibly resulting in data corrections.
   de: Dieser Task erstellt alle Dokumente in der Datenbank neu, basierend auf den vorhandenen Dokument-Revisionen. Eventuell inkorrekte Dokument-Daten werden dabei berichtigt.
 cdnResourcesConsolidationHeader:
-  en: CDN resources consolidation
-  de: CDN-Ressourcen konsolidieren
+  en: Consolidation of resources within the internal storage
+  de: Ressourcen auf dem internen Speicher konsolidieren
 cdnResourcesConsolidationDescription:
-  en: Update the list of CDN resources linked in documents and documentRevisions. This task updates database data, possibly resulting in data corrections.
-  de: Dieser Task aktualisiert die Liste der in den Dokumenten und Dokument-Revisionen verknüpften CDN-Ressourcen. Eventuell inkorrekte Daten werden dabei berichtigt.
+  en: Update the list of internal storage resources linked in documents and documentRevisions. This task updates database data, possibly resulting in data corrections.
+  de: Dieser Task aktualisiert die Liste der in den Dokumenten und Dokument-Revisionen verknüpften internen Speicher-Ressourcen. Eventuell inkorrekte Daten werden dabei berichtigt.
 cdnDirectoriesCreationHeader:
-  en: CDN directories creation
-  de: CDN-Verzeichnisse erstellen
+  en: Creation of upload directories within the internal storage
+  de: Upload-Verzichnisse auf dem internen Speicher erstellen
 cdnDirectoriesCreationDescription:
-  en: Ensure the CDN contains a public upload directory for each existing document (including private documents in rooms). This task updates the CDN by adding the missing directories.
-  de: Dieser Task stellt sicher, dass für jedes Dokument in der Datenbank (inclusive privater Dokumente) ein korrespondierendes öffentliches Verzeichnis im CDN existiert. Fehlende Verzeichnisse werden hierbei neu angelegt.
+  en: Ensure the internal storage contains a public upload directory for each existing document (including private documents in rooms). This task updates the internal storage by adding the missing directories.
+  de: Dieser Task stellt sicher, dass für jedes Dokument in der Datenbank (inclusive privater Dokumente) ein korrespondierendes öffentliches Verzeichnis im internen Speicher existiert. Fehlende Verzeichnisse werden hierbei neu angelegt.
 lastExecution:
   en: Last execution
   de: Letzte Ausführung
