EDU-849 Simplify English tooltip

--- a/src/plugins/media-analysis/media-analysis.yml
+++ b/src/plugins/media-analysis/media-analysis.yml
@@ -26,5 +26,5 @@ segmentsDropzoneInfo:
   en: You can drop a CSV file in this box in order to import segments
   de: Sie können eine CSV-Datei in diese Box ziehen, um Segmente zu importieren
 startPlaybackFromHere:
-  en: Click here to start the playback beginning with this part
+  en: Click here to play from this part
   de: Klicke hier, um die Wiedergabe ab diesem Teil zu starten
