--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "locale-compare": "^1.0.0",
     "make-error": "^1.3.6",
     "markdown-it": "^12.2.0",
+    "markdown-it-anchor": "^8.6.5",
     "md5": "^2.3.0",
     "memoizee": "^0.4.15",
     "mime": "^2.5.2",
