--- a/src/components/confirmation-dialogs.yml
+++ b/src/components/confirmation-dialogs.yml
@@ -23,7 +23,7 @@ deleteRoomMemberConfirmation:
   en: Do you really want to remove member "{memberDisplayName}" from the room?
   de: Möchtest du das Mitglied "{memberDisplayName}" wirklich vom Raum entfernen?
 deleteRoomInvitationConfirmation:
-  en: Do you really want to revoke room invitation send to "{invitationEmail}"?
+  en: Do you really want to revoke the room invitation sent to "{invitationEmail}"?
   de: Möchtest du die Raumeinladung für "{invitationEmail}" wirklich widerrufen?
 leaveRoomConfirmation:
   en: Do you really want to cancel your membership in room "{roomName}"?
